# base_log

./: CMakeLists.txt  README.md
include/: base_log.h
src/: base_log.cpp
tests/: test.cpp
